pubmed link fixed

--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 
 			<li><p>
 			Smith ZD#, <b>Shi J#</b>, Gu H, Donaghey J, Clement K, Cacchiarelli D, Gnirke A, Michor F, Meissner A: Epigenetic restriction of extraembryonic lineages mirrors the somatic transition to cancer. <b>Nature</b> 2017
-			
+			[<a href="https://www.ncbi.nlm.nih.gov/pubmed/28959968">PubMed</a>]
 			[<a href="Publications/nature23891.pdf" target="_blank">PDF</a>]
 			</p></li>
 
