--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<ul class="menu">
 				<li><a class="current" href="index.html">Home</a></li>
 				<li><a href="publications.html">Publications</a></li>
+				<li><a href="software.html">software</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				
 			</ul>
@@ -40,6 +41,7 @@
 			<h2>Recent News</h2>
 			<ul style="list-style-type:square">
 			
+			<li><p><b>09-Nov-2017:</b> Network-based gene prioritization analysis with NetGPA.</p></li>
 			<li><p><b>20-Sep-2017:</b> Placenta paper Advance Online Publication (AOP).</p></li>
 			<li><p><b>22-Jul-2017:</b> Personal webpages designed.</p></li>			
 			
