index in contact updated

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
 			<ul class="menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="publications.html">Publications</a></li>
+				<li><a href="software.html">software</a></li>
 				<li><a class="current" href="contact.html">Contact</a></li>
 			</ul>
 		</div>
