--- a/software.html
+++ b/software.html
@@ -38,6 +38,12 @@
 			<h2>SOFTWARE PACKAGES</h2>
 			
 			<li><p>
+			AMD, an Automated Motif Discovery Tool.
+			[<a href="https://github.com/JiantaoShi/AMD">GitHub</a>]
+			[<a href="Publications/PlosOne_2011.pdf" target="_blank">Full Text PDF</a>]
+			</p></li>
+
+			<li><p>
 			Network-based gene prioritization analysis with NetGPA.
 			[<a href="Package/NetGPA_vignettes.html">Vignettes</a>]
 			[<a href="Package/NetGPA_vignettes.pdf" target="_blank">PDF</a>]
