--- a/software.html
+++ b/software.html
@@ -48,7 +48,13 @@
 			[<a href="Package/NetGPA_vignettes.html">Vignettes</a>]
 			[<a href="Package/NetGPA_vignettes.pdf" target="_blank">PDF</a>]
 			</p></li>
-			
+
+			<li><p>
+			Network-based pathway over-representation analysis with NetORA.
+			[<a href="Package/NetORA_vignettes.html">Vignettes</a>]
+			[<a href="Package/NetORA_vignettes.pdf" target="_blank">PDF</a>]
+			</p></li>
+						
 			<li><p>
 			Full list of packages can ben found at <a href="https://github.com/JiantaoShi">GitHub</a>
 			</p></li>			
