github link added for NetGPA and NetORA

--- a/software.html
+++ b/software.html
@@ -45,12 +45,14 @@
 
 			<li><p>
 			Network-based gene prioritization analysis with NetGPA.
+			[<a href="https://github.com/JiantaoShi/NetGPA">GitHub</a>]
 			[<a href="Package/NetGPA_vignettes.html">Vignettes</a>]
 			[<a href="Package/NetGPA_vignettes.pdf" target="_blank">PDF</a>]
 			</p></li>
 
 			<li><p>
 			Network-based pathway over-representation analysis with NetORA.
+			[<a href="https://github.com/JiantaoShi/NetORA">GitHub</a>]
 			[<a href="Package/NetORA_vignettes.html">Vignettes</a>]
 			[<a href="Package/NetORA_vignettes.pdf" target="_blank">PDF</a>]
 			</p></li>
