--- a/software.html
+++ b/software.html
@@ -56,7 +56,14 @@
 			[<a href="Package/NetORA_vignettes.html">Vignettes</a>]
 			[<a href="Package/NetORA_vignettes.pdf" target="_blank">PDF</a>]
 			</p></li>
-						
+
+			<li><p>
+			Characterizing cancer initiation by Moran Process.
+			[<a href="https://github.com/JiantaoShi/MoranProcess">GitHub</a>]
+			[<a href="Package/MoranProcess.html">Vignettes</a>]
+			[<a href="Package/MoranProcess.pdf" target="_blank">PDF</a>]
+			</p></li>
+
 			<li><p>
 			Full list of packages can ben found at <a href="https://github.com/JiantaoShi">GitHub</a>
 			</p></li>			
