--- a/software.html
+++ b/software.html
@@ -65,6 +65,12 @@
 			</p></li>
 
 			<li><p>
+			Extracting DNA methylation haplotypes.
+			[<a href="https://github.com/JiantaoShi/mHaplotype">GitHub</a>]
+			[<a href="Package/mHaplotype_vignettes.html">Vignettes</a>]
+			</p></li>
+
+			<li><p>
 			Full list of packages can ben found at <a href="https://github.com/JiantaoShi">GitHub</a>
 			</p></li>			
 
