mHaplotype vignettes updated

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<h2>Recent News</h2>
 			<ul style="list-style-type:square">
 			
+			<li><p><b>19-May-2018:</b> Tools for DNA methylation haplotypes (mHaplotype) added.</p></li>						
 			<li><p><b>09-Nov-2017:</b> Network-based gene prioritization analysis with NetGPA.</p></li>
 			<li><p><b>20-Sep-2017:</b> Placenta paper Advance Online Publication (AOP).</p></li>
 			<li><p><b>22-Jul-2017:</b> Personal webpages designed.</p></li>			
