mhaplotype vignettes PDF

--- a/software.html
+++ b/software.html
@@ -68,6 +68,7 @@
 			Extracting DNA methylation haplotypes.
 			[<a href="https://github.com/JiantaoShi/mHaplotype">GitHub</a>]
 			[<a href="Package/mHaplotype_vignettes.html">Vignettes</a>]
+			[<a href="Package/mHaplotype_vignettes.pdf" target="_blank">PDF</a>]			
 			</p></li>
 
 			<li><p>
