ExE patent added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<li><a class="current" href="index.html">Home</a></li>
 				<li><a href="publications.html">Publications</a></li>
 				<li><a href="software.html">software</a></li>
+				<li><a href="patents.html">patents</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				
 			</ul>
@@ -41,6 +42,7 @@
 			<h2>Recent News</h2>
 			<ul style="list-style-type:square">
 			
+			<li><p><b>02-Oct-2018:</b> US patent on cancer diagnosis added.</p></li>
 			<li><p><b>19-May-2018:</b> Tools for DNA methylation haplotypes (mHaplotype) added.</p></li>						
 			<li><p><b>09-Nov-2017:</b> Network-based gene prioritization analysis with NetGPA.</p></li>
 			<li><p><b>20-Sep-2017:</b> Placenta paper Advance Online Publication (AOP).</p></li>
