--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a class="current" href="publications.html">Publications</a></li>
 				<li><a href="software.html">software</a></li>
+				<li><a href="patents.html">patents</a></li>
 				<li><a href="contact.html">Contact</a></li>
 
 			</ul>
