--- a/patents.html
+++ b/patents.html
@@ -27,28 +27,24 @@
 		<div class="col c2 alignleft">
 			<ul class="menu">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="publications.html">Publications</a></li>
+				<li><a href="publications.html">publications</a></li>
 				<li><a href="software.html">software</a></li>
-				<li><a href="patents.html">patents</a></li>
-				<li><a class="current" href="contact.html">Contact</a></li>
+				<li><a class="current" href="patents.html">patents</a></li>
+				<li><a href="contact.html">Contact</a></li>
+
 			</ul>
 		</div>
  
 		<div class="col c10">
-			<h2>Contact Information</h2>
+			<h2>Patents under review</h2>
+			
+			<dt># indicates equal contribution. </dt><br>
 
-			<p>
-				<b>Email:</b> Jiantao_Shi (at) DFCI.HARVARD.EDU<br>
-				<b>Phone:</b> +1 6173904859 <br>
-				<b>Address:</b>
-				The Center for Life Sciences Building
-				3 Blackfan Circle
-				Boston, MA 02115<br>
-			</p>
-				
-			<div class="location-map-float-right">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17674.681070982027!2d-71.11536637879237!3d42.34021122283409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3798c89a686a9%3A0x3a37fe0cdefbfe92!2s3+Blackfan+Cir%2C+Boston%2C+MA+02115!5e0!3m2!1sen!2sus!4v1500818992801" width="680" height="510" frameborder="0" style="border:0" allowfullscreen></iframe>	
-			</div>
+			<li><p>
+			Smith ZD#, <b>Shi J#</b>, Michor F, Meissner A: Universal Early Cancer Diagnostics. (US application No. 62/505,647)
+			[<a href="Publications/nature23891.pdf" target="_blank">Publication</a>]
+			[<a href="Patents/Patents_ExE.html" target="_blank">Description</a>]
+			</p></li>
 
 		</div>
 	</div>
