--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 			<h2>Contact Information</h2>
 
 			<p>
-				<b>Email:</b> Jiantao_Shi (at) DFCI.HARVARD.EDU<br>
+				<b>Email:</b> shijiantao (at) gmail.com<br>
 				<b>Phone:</b> +1 6173904859 <br>
 				<b>Address:</b>
 				The Center for Life Sciences Building
