--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
  
 		<div class="col c10">
 			<h2>Welcome</h2>
-				<p>My name is Jiantao Shi. I studied biology at Huazhong University of Science and Technology in China. I received PhD degree from Shanghai Institutes for Biological Sciences, Chinese Academy of Science, in 2010, where my research focused on identification and annotation of genome-wide binding sites of transcription factors. I joined the Hide Lab at The Harvard T.H. Chan School of Public Health in 2012, where I worked with Francois Mercier from David Scadden's Lab to identify the key signaling pathways driving aggressiveness of leukemia stem cells. I also worked with Rudolph Tanzi on 1000 genomes of Alzheimer's disease to identify rare non-coding mutations. At Dana Farber Cancer Institute, I am interested in modeling cancer progression using computational and mathematical methods.</p>				
-			
+				<p>My name is Jiantao Shi. I am a Principal Investigator (PI) at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/" target="_blank">CAS</a>). My team will be working on cancer genomics and epigenomic. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection. I also run a bioinformatics core which support the integrative analysis of high through-put data in SIBCB. </p>								
+				<li> </li>
+				
 			<h2>Recent News</h2>
 			<ul style="list-style-type:square">
 			
