--- a/patents.html
+++ b/patents.html
@@ -41,8 +41,8 @@
 			<dt># indicates equal contribution. </dt><br>
 
 			<li><p>
-			Smith ZD#, <b>Shi J#</b>, Michor F, Meissner A: Universal Early Cancer Diagnostics. (US application No. 62/505,647)
-			[<a href="Publications/nature23891.pdf" target="_blank">Publication</a>]
+			Smith ZD#, <b>Shi J#</b>, Michor F, Meissner A: Universal Early Cancer Diagnostics. (International application No. PCT/US2018/032612)
+			[<a href="Publications/PCT-US2018-032612.pdf" target="_blank">Publication</a>]
 			[<a href="Patents/Patents_ExE.html" target="_blank">Description</a>]
 			</p></li>
 
