chrome compatibility fixed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
  
 		<div class="col c10">
 			<h2>Welcome</h2>
+			<ul style="list-style-type:square">
+
 				<p>My name is Jiantao Shi. I am a Principal Investigator (PI) at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/" target="_blank">CAS</a>). My team will be working on cancer genomics and epigenomic. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection. I also run a bioinformatics core which support the integrative analysis of high through-put data in SIBCB. </p>								
 				<li> </li>
 				
