--- a/patents.html
+++ b/patents.html
@@ -37,6 +37,7 @@
  
 		<div class="col c10">
 			<h2>Patents under review</h2>
+			<ul style="list-style-type:square">
 			
 			<dt># indicates equal contribution. </dt><br>
 
