--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,10 @@
  
 		<div class="col c10">
 			<h2>Peer-reviewed journal publications</h2>
+			<ul style="list-style-type:square">
 			
 			<dt># indicates equal contribution. </dt><br>
+			
 
 			<li><p>
 			Smith ZD#, <b>Shi J#</b>, Gu H, Donaghey J, Clement K, Cacchiarelli D, Gnirke A, Michor F, Meissner A: Epigenetic restriction of extraembryonic lineages mirrors the somatic transition to cancer. <b>Nature</b> 2017
