--- a/software.html
+++ b/software.html
@@ -37,6 +37,7 @@
  
 		<div class="col c10">
 			<h2>SOFTWARE PACKAGES</h2>
+			<ul style="list-style-type:square">
 			
 			<li><p>
 			AMD, an Automated Motif Discovery Tool.
