new home page template for bioinformatics core

--- a/生物信息平台.html
+++ b/生物信息平台.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Your Name" />
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" type="text/css" href="origo.css" title="Origo" media="all" />
-	<title>Jiantao Shi</title>
+	<title>中科院分子细胞科学卓越创新中心生物信息平台</title>
 </head>
 
 <body class="light blue smaller freestyle01">
@@ -15,23 +15,25 @@
  
 	<div class="row smaller">
 		<div class="col c5 smaller">
-			<h1><a href="index.html">Jiantao Shi</a></h1> 
+			<h1><a href="index.html"></a></h1> 
 		</div>
 		
 		<div class="col c7 aligncenter">
-			<p class="slogan">Computational Biology and Mathematical Modeling</p>
+			<p class="slogan"></p>
 		</div>
 	</div>
    
 	<div class="row">
 		<div class="col c2 alignleft">
 			<ul class="menu">
-				<li><a class="current" href="index.html">Home</a></li>
-				<li><a href="publications.html">Publications</a></li>
-				<li><a href="software.html">software</a></li>
-				<li><a href="patents.html">patents</a></li>
-				<li><a href="contact.html">Contact</a></li>
-				<li><a href="生物信息平台.html">生物信息平台</a></li>
+				<li><a class="current" href="生物信息平台.html">主页</a></li>
+				<li><a href="规章制度.html">规章制度</a></li>
+				<li><a href="标准分析流程.html">标准流程</a></li>
+				<li><a href="入门材料.html">入门材料</a></li>
+				<li><a href="团队.html">团队成员</a></li>
+				<li><a href="最新消息.html">最新消息</a></li>
+				<li><a href="联系我们.html">联系我们</a></li>
+
 			</ul>
 		</div>
  
@@ -40,23 +42,14 @@
 			<ul style="list-style-type:square">
 
 				<p>My name is Jiantao Shi. I am a Principal Investigator (PI) at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/" target="_blank">CAS</a>). My team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection. I also run a bioinformatics core which support the integrative analysis of high through-put data in SIBCB. </p>								
-				<li> </li>
-				
-			<h2>Recent News</h2>
-			<ul style="list-style-type:square">
-			
-			<li><p><b>02-Oct-2018:</b> US patent on cancer diagnosis added.</p></li>
-			<li><p><b>19-May-2018:</b> Tools for DNA methylation haplotypes (mHaplotype) added.</p></li>						
-			<li><p><b>09-Nov-2017:</b> Network-based gene prioritization analysis with NetGPA.</p></li>
-			<li><p><b>20-Sep-2017:</b> Placenta paper Advance Online Publication (AOP).</p></li>
-			<li><p><b>22-Jul-2017:</b> Personal webpages designed.</p></li>			
+				<li> </li>	
 			
 		</div>
 	</div>
  
 	<div id="footer" class="row">
 		<div class="col c12 aligncenter">
-			<p><a href="http://andreasviklund.com/dt_portfolio/origo/">Template design</a> by <a href="http://andreasviklund.com/">Andreas Viklund</a><br />
+			<p><a href="http://http://www.sibcb.ac.cn/">中科院分子细胞科学卓越创新中心</a> <a href="http://http://www.sibcb.ac.cn/cfmb/">生物信息平台</a><br />
 		</div>
 	</div>
  </div>
