--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
 				<li><a href="software.html">software</a></li>
 				<li><a href="patents.html">patents</a></li>
 				<li><a class="current" href="contact.html">Contact</a></li>
+				<li><a href="生物信息平台.html">生物信息平台</a></li>
+				
 			</ul>
 		</div>
  
