--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,7 @@
 				<li><a href="software.html">software</a></li>
 				<li><a href="patents.html">patents</a></li>
 				<li><a href="contact.html">Contact</a></li>
+				<li><a href="生物信息平台.html">生物信息平台</a></li>
 
 			</ul>
 		</div>
