--- a/标准分析流程.html
+++ b/标准分析流程.html
@@ -26,18 +26,18 @@
 	<div class="row">
 		<div class="col c2 alignleft">
 			<ul class="menu">
-				<li><a class="current" href="生物信息平台.html">主页</a></li>
-				<li><a href="标准分析流程.html">标准流程</a></li>
+				<li><a href="生物信息平台.html">主页</a></li>
+				<li><a class="current" href="标准分析流程.html">标准流程</a></li>
 
 			</ul>
 		</div>
  
 		<div class="col c10">
-			<h2></h2>
+			<h2>最新动态</h2>
 			<ul style="list-style-type:square">
 
-				<p> 中科院分子细胞科学卓越创新中心生物信息平台，拟开发标准化的、通用的分析流程，满足生化细胞所内常见高通量组学数据的基本分析需求，包括转录组、基因组、表观基因组、蛋白质组和代谢组等。</p>								
-				<li> </li>	
+			<li><p><b></b></p></li>
+			<li><p><b>18-May-2020:</b> <a href="TBC/RNAseq-workflow.html" target="_blank">RNA-seq快速分析及质控流程。</a> </p></li>
 			
 		</div>
 	</div>
