--- a/生物信息平台.html
+++ b/生物信息平台.html
@@ -44,7 +44,7 @@
  
 	<div id="footer" class="row">
 		<div class="col c12 aligncenter">
-			<p><a href="http://http://www.sibcb.ac.cn/">中科院分子细胞科学卓越创新中心</a> <a href="http://http://www.sibcb.ac.cn/cfmb/">生物信息平台</a><br />
+			<p><a href="http://http://www.sibcb.ac.cn/">中科院分子细胞科学卓越创新中心</a> <a href="https://jiantaoshi.github.io/%E7%94%9F%E7%89%A9%E4%BF%A1%E6%81%AF%E5%B9%B3%E5%8F%B0.html">生物信息平台</a><br />
 		</div>
 	</div>
  </div>
