--- a/标准分析流程.html
+++ b/标准分析流程.html
@@ -38,6 +38,7 @@
 
 			<li><p><b></b></p></li>
 			<li><p><b>18-May-2020:</b> <a href="TBC/RNAseq-workflow.html" target="_blank">RNA-seq快速分析及质控流程。</a> </p></li>
+			<li><p><b>02-Jun-2020:</b> <a href="TBC/DataSummary.html" target="_blank">RNA-seq质量控制及基因定量汇集。</a> </p></li>
 			
 		</div>
 	</div>
