--- a/标准分析流程.html
+++ b/标准分析流程.html
@@ -42,7 +42,7 @@
 			<li><p><b>05-Jun-2020:</b> <a href="TBC/DiffExpGenes.html" target="_blank">RNA-seq差异表达分析。</a> </p></li>
 			<li><p><b>05-Jun-2020:</b> <a href="TBC/DimeReduce.html" target="_blank">RNA-seq数据降维。</a> </p></li>
 			<li><p><b>08-Jun-2020:</b> <a href="TBC/Pathway.html" target="_blank">RNA-seq通路富集分析。</a> </p></li>
-			
+			<li><p><b>08-Jun-2020:</b> <a href="TBC/GSEA.html" target="_blank">RNA-seq数据的GSEA分析。</a> </p></li>			
 		</div>
 	</div>
  
