--- a/标准分析流程.html
+++ b/标准分析流程.html
@@ -43,6 +43,8 @@
 			<li><p><b>05-Jun-2020:</b> <a href="TBC/DimeReduce.html" target="_blank">RNA-seq数据降维。</a> </p></li>
 			<li><p><b>08-Jun-2020:</b> <a href="TBC/Pathway.html" target="_blank">RNA-seq通路富集分析。</a> </p></li>
 			<li><p><b>08-Jun-2020:</b> <a href="TBC/GSEA.html" target="_blank">RNA-seq数据的GSEA分析。</a> </p></li>			
+			<li><p><b>11-Jun-2020:</b> <a href="TBC/Clustering.html" target="_blank">RNA-seq数据的样本聚类分析。</a> </p></li>			
+
 		</div>
 	</div>
  
