--- a/标准分析流程.html
+++ b/标准分析流程.html
@@ -44,6 +44,7 @@
 			<li><p><b>08-Jun-2020:</b> <a href="TBC/Pathway.html" target="_blank">RNA-seq通路富集分析。</a> </p></li>
 			<li><p><b>08-Jun-2020:</b> <a href="TBC/GSEA.html" target="_blank">RNA-seq数据的GSEA分析。</a> </p></li>			
 			<li><p><b>11-Jun-2020:</b> <a href="TBC/Clustering.html" target="_blank">RNA-seq数据的样本聚类分析。</a> </p></li>			
+			<li><p><b>18-Jun-2020:</b> <a href="TBC/ARACNE.html" target="_blank">RNA-seq转录调控网路构建（ARACNE）。</a> </p></li>			
 
 		</div>
 	</div>
