TBC link updated

--- a/patents.html
+++ b/patents.html
@@ -31,7 +31,7 @@
 				<li><a href="software.html">software</a></li>
 				<li><a class="current" href="patents.html">patents</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href="生物信息平台.html">生物信息平台</a></li>
+				<li><a href="http://bioinformatics.sibcb.ac.cn/">生物信息平台</a></li>
 
 			</ul>
 		</div>
