MM study was accepted for publication in Blood

--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,10 @@
 			<ul style="list-style-type:square">
 			
 			<dt># indicates equal contribution. </dt><br>
-			
+
+			<li><p>
+			Shen YJ#, Mishima Y#, <b>Shi J#</b>, Sklavenitis-Pistofidis R#, Redd RA, Moschetta M, Manier S, Roccaro A, Sacco A, Tai Y-T, Mercier F, Kawano Y, Su NK, Berrios B, Doench JG, Root DE, Michor F, Scadden DT, Ghobrial IM (2020) Progression signature underlies clonal evolution and dissemination of multiple myeloma. <b>Blood</b>, in press
+			</p></li>			
 
 			<li><p>
 			Smith ZD#, <b>Shi J#</b>, Gu H, Donaghey J, Clement K, Cacchiarelli D, Gnirke A, Michor F, Meissner A: Epigenetic restriction of extraembryonic lineages mirrors the somatic transition to cancer. <b>Nature</b> 2017
