--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<h2>Recent News</h2>
 			<ul style="list-style-type:square">
 			
+			<li><p><b>08-Oct-2020:</b> ​Collaborative research on multiple myeloma was accepted for publication in Blood.</p></li>			
 			<li><p><b>02-Oct-2018:</b> US patent on cancer diagnosis added.</p></li>
 			<li><p><b>19-May-2018:</b> Tools for DNA methylation haplotypes (mHaplotype) added.</p></li>						
 			<li><p><b>09-Nov-2017:</b> Network-based gene prioritization analysis with NetGPA.</p></li>
