--- a/contact.html
+++ b/contact.html
@@ -41,11 +41,11 @@
 
 			<p>
 				<b>Email:</b> shijiantao (at) gmail.com<br>
-				<b>Phone:</b> +1 6173904859 <br>
+				<b>Phone:</b><br>
 				<b>Address:</b>
-				The Center for Life Sciences Building
-				3 Blackfan Circle
-				Boston, MA 02115<br>
+				Room 101, the Building for Research in Cell Biology
+				320 Yueyang Road
+				Shanghai, China 200031<br>
 			</p>
 				
 			<div class="location-map-float-right">
