Supporting website added

--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,7 @@
 
 			<li><p>
 			Shen YJ#, Mishima Y#, <b>Shi J#</b>, Sklavenitis-Pistofidis R#, Redd RA, Moschetta M, Manier S, Roccaro A, Sacco A, Tai Y-T, Mercier F, Kawano Y, Su NK, Berrios B, Doench JG, Root DE, Michor F, Scadden DT, Ghobrial IM (2020) Progression signature underlies clonal evolution and dissemination of multiple myeloma. <b>Blood</b>, in press
+			[<a href="http://bioinformatics.sibcb.ac.cn/dataupload/MM_rainbow_GSE121007/Index.html">Supporting website</a>]			
 			</p></li>			
 
 			<li><p>
