--- a/Patents_ExE.html
+++ b/Patents_ExE.html
@@ -1479,7 +1479,7 @@ font-size: 20px;
 }
 #rStudioHeader .rStudio {
 margin-top: 5px;
-font-size: 13px;
+font-size: 14px;
 line-height: 25px;
 font-weight: 200;
 color: #4d4d4d;
@@ -1504,7 +1504,7 @@ color: inherit;
 #rStudioHeader #menu {
 text-align: right;
 font-weight: 400;
-font-size: 13px;
+font-size: 14px;
 line-height: 20px;
 white-space: nowrap;
 }
@@ -1640,7 +1640,7 @@ width: 100%;
 height: auto;
 }
 .gallerySection .galleryItems .galleryItem .galleryItemDescription {
-font-size: 12px;
+font-size: 13px;
 padding: 0px 10px 10px 10px;
 }
 .formatSection a.doc, .formatSection a.pres, .formatSection a.more {
@@ -1759,7 +1759,7 @@ background-color: #75aadb;
 padding: 30px 5%;
 color: #fff;
 font-weight: 300;
-font-size: 12px;
+font-size: 13px;
 line-height: 25px;
 }
 #rStudioFooter .bandContent {
@@ -2294,7 +2294,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 3.5.1 (2018-07-02)
 ## Platform: x86_64-conda_cos6-linux-gnu (64-bit)
-## Running under: Red Hat Enterprise Linux Server 7.6 (Maipo)
+## Running under: Red Hat Enterprise Linux Server 7.7 (Maipo)
 ## 
 ## Matrix products: default
 ## BLAS: /sibcb2/bioinformatics/software/BcbioNG/anaconda/lib/R/lib/libRblas.so
@@ -2307,23 +2307,12 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] NetORA_0.99.0  devtools_2.2.1 usethis_1.5.1  ggplot2_3.2.1  NetGPA_0.99.0 
-## [6] rmarkdown_2.0 
+## [1] rmarkdown_2.0
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] tidyselect_0.2.5  xfun_0.18         remotes_2.1.0     purrr_0.3.3      
-##  [5] colorspace_1.4-1  testthat_2.3.1    htmltools_0.5.0   yaml_2.2.0       
-##  [9] rlang_0.4.6       pkgbuild_1.0.6    pillar_1.4.3      glue_1.3.1       
-## [13] withr_2.1.2       sessioninfo_1.1.1 lifecycle_0.1.0   stringr_1.4.0    
-## [17] munsell_0.5.0     gtable_0.3.0      evaluate_0.14     memoise_1.1.0    
-## [21] labeling_0.3      knitr_1.26        callr_3.4.0       ps_1.3.0         
-## [25] curl_4.3          fansi_0.4.0       Rcpp_1.0.3        scales_1.1.0     
-## [29] backports_1.1.5   desc_1.2.0        pkgload_1.0.2     farver_2.0.1     
-## [33] fs_1.3.1          digest_0.6.23     stringi_1.4.3     processx_3.4.1   
-## [37] dplyr_0.8.5       grid_3.5.1        rprojroot_1.3-2   cli_2.0.0        
-## [41] tools_3.5.1       magrittr_1.5      lazyeval_0.2.2    tibble_2.1.3     
-## [45] crayon_1.3.4      pkgconfig_2.0.3   ellipsis_0.3.0    prettyunits_1.0.2
-## [49] assertthat_0.2.1  R6_2.4.1          compiler_3.5.1</code></pre>
+##  [1] compiler_3.5.1  magrittr_1.5    tools_3.5.1     htmltools_0.5.0
+##  [5] yaml_2.2.0      stringi_1.4.3   knitr_1.26      stringr_1.4.0  
+##  [9] xfun_0.18       digest_0.6.23   rlang_0.4.6     evaluate_0.14</code></pre>
 </div>
 <div id="references" class="section level1">
 <h1>References</h1>
