--- a/Software.html
+++ b/Software.html
@@ -2235,19 +2235,19 @@ div.tocify {
 <div id="rStudioHeader" class="alwaysShrunk">
   <div class="innards bandContent">
     <div>
-      <a class="productName" href="index.html">Cancer Systems Biology</a>
+      <a class="productName" href="https://jiantaoshi.github.io/index.html">Cancer Systems Biology</a>
       <div class="rStudio"><span class="light"> </span> <a href="https://jiantaoshi.github.io"><div class="logo"></div></a></div>
     </div>
 
     <div id="menu">
       <div id="menuToggler"></div>
       <div id="menuItems">
-        <a class="menuItem" href="Publications.html">Publications</a>
-        <a class="menuItem" href="Software.html">Software</a>
-        <a class="menuItem" href="Patents.html">Patents</a>
-        <a class="menuItem" href="People.html">People</a>
-        <a class="menuItem" href="Notebook.html">Notebook</a>
-        <a class="menuItem" href="Careers.html">Careers</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Publications.html">Publications</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Software.html">Software</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Patents.html">Patents</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/People.html">People</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Notebook.html">Notebook</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Careers.html">Careers</a>
         <a class="menuItem gitHub" href="https://github.com/JiantaoShi/JiantaoShi.github.io"></a>
       </div>
     </div>
@@ -2287,7 +2287,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <div id="transcriptional-regulatory-and-epigenomics" class="section level2">
 <h2>Transcriptional regulatory and epigenomics</h2>
 <p>AMD, an Automated Motif Discovery Tool. <a href="https://github.com/JiantaoShi/AMD">[Github]</a> <a href="Publications/PlosOne_2011.pdf">[Full Text]</a></p>
-<p>Extracting DNA methylation haplotypes. <a href="mHaplotype_vignettes.Rmd">[Vignettes]</a></p>
+<p>Extracting DNA methylation haplotypes. <a href="mHaplotype_vignettes.html">[Vignettes]</a></p>
 </div>
 
   </div> <!-- articleBandContent -->
