--- a/NoteBook/Notes_Placenta_GSE84236_raw.html
+++ b/NoteBook/Notes_Placenta_GSE84236_raw.html
@@ -2286,8 +2286,8 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <thead>
 <tr class="header">
 <th align="right">Name</th>
-<th align="center">BAM</th>
-<th align="center">mHap</th>
+<th align="center">BAM (mm9)</th>
+<th align="center">mHap (mm9)</th>
 </tr>
 </thead>
 <tbody>
