software page updated

--- a/Software.html
+++ b/Software.html
@@ -2281,13 +2281,17 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="network-biology" class="section level2">
 <h2>Network Biology</h2>
-<p>Network-based gene prioritization analysis with NetGPA.<a href="https://github.com/JiantaoShi/NetGPA">[Github]</a> <a href="NetGPA_vignettes.html">[Vignettes]</a></p>
-<p>Network-based pathway over-representation analysis with NetORA.<a href="https://github.com/JiantaoShi/NetORA">[Github]</a> <a href="NetORA_vignettes.html">[Vignettes]</a></p>
+<ul>
+<li>NetGPA: Network-based gene prioritization analysis.<a href="https://github.com/JiantaoShi/NetGPA">[Github]</a> <a href="NetGPA_vignettes.html">[Vignettes]</a></li>
+<li>NetORA: Network-based pathway over-representation analysis.<a href="https://github.com/JiantaoShi/NetORA">[Github]</a> <a href="NetORA_vignettes.html">[Vignettes]</a></li>
+</ul>
 </div>
-<div id="transcriptional-regulatory-and-epigenomics" class="section level2">
-<h2>Transcriptional regulatory and epigenomics</h2>
-<p>AMD, an Automated Motif Discovery Tool. <a href="https://github.com/JiantaoShi/AMD">[Github]</a> <a href="Publications/PlosOne_2011.pdf">[Full Text]</a></p>
-<p>Extracting DNA methylation haplotypes. <a href="mHaplotype_vignettes.html">[Vignettes]</a></p>
+<div id="epigenomics" class="section level2">
+<h2>Epigenomics</h2>
+<ul>
+<li>AMD: an Automated Motif Discovery Tool. <a href="https://github.com/JiantaoShi/AMD">[Github]</a> <a href="Publications/PlosOne_2011.pdf">[Full Text]</a></li>
+<li>mHaplotype: Extracting DNA methylation haplotypes. <a href="mHaplotype_vignettes.html">[Vignettes]</a></li>
+</ul>
 </div>
 
   </div> <!-- articleBandContent -->
