--- a/Patents/Patents_ExE.html
+++ b/Patents/Patents_ExE.html
@@ -2294,7 +2294,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 3.5.1 (2018-07-02)
 ## Platform: x86_64-conda_cos6-linux-gnu (64-bit)
-## Running under: Red Hat Enterprise Linux Server 7.6 (Maipo)
+## Running under: Red Hat Enterprise Linux Server 7.7 (Maipo)
 ## 
 ## Matrix products: default
 ## BLAS: /sibcb2/bioinformatics/software/BcbioNG/anaconda/lib/R/lib/libRblas.so
@@ -2323,13 +2323,12 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 <div id="rStudioFooter" class="band full">
 <div class="bandContent">
-  <div id="copyright">The Bioinformatics Core, Shanghai Institute of Biochemistry and Cell Biology, CAS</div>
+  <div id="copyright">Shanghai Institute of Biochemistry and Cell Biology, Center for Excellence in Molecular Cell Science, CAS</div>
   <div id="logos">
     <a href="https://jiantaoshi.github.io" class="footerLogo gitHub"></a>
-    <a href="http://bioinformatics.sibcb.ac.cn" class="footerLogo homepage"></a>
+    <a href="https://scholar.google.com/citations?user=As_3nrcAAAAJ&amp;hl=en" class="footerLogo homepage"></a>
   </div>
 </div>
-	<p>CSS was modified from <a href="https://github.com/rstudio/rmarkdown/tree/gh-pages/">Rstudio Rmarkdown</a>
 </div>
 
 
