--- a/People.html
+++ b/People.html
@@ -2235,19 +2235,19 @@ div.tocify {
 <div id="rStudioHeader" class="alwaysShrunk">
   <div class="innards bandContent">
     <div>
-      <a class="productName" href="index.html">Cancer Systems Biology</a>
+      <a class="productName" href="https://jiantaoshi.github.io/index.html">Cancer Systems Biology</a>
       <div class="rStudio"><span class="light"> </span> <a href="https://jiantaoshi.github.io"><div class="logo"></div></a></div>
     </div>
 
     <div id="menu">
       <div id="menuToggler"></div>
       <div id="menuItems">
-        <a class="menuItem" href="Publications.html">Publications</a>
-        <a class="menuItem" href="Software.html">Software</a>
-        <a class="menuItem" href="Patents.html">Patents</a>
-        <a class="menuItem" href="People.html">People</a>
-        <a class="menuItem" href="Notebook.html">Notebook</a>
-        <a class="menuItem" href="Careers.html">Careers</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Publications.html">Publications</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Software.html">Software</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Patents.html">Patents</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/People.html">People</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Notebook.html">Notebook</a>
+        <a class="menuItem" href="https://jiantaoshi.github.io/Careers.html">Careers</a>
         <a class="menuItem gitHub" href="https://github.com/JiantaoShi/JiantaoShi.github.io"></a>
       </div>
     </div>
@@ -2353,13 +2353,12 @@ Siqi Gao
 
 <div id="rStudioFooter" class="band full">
 <div class="bandContent">
-  <div id="copyright">The Bioinformatics Core, Shanghai Institute of Biochemistry and Cell Biology, CAS</div>
+  <div id="copyright">Shanghai Institute of Biochemistry and Cell Biology, Center for Excellence in Molecular Cell Science, CAS</div>
   <div id="logos">
     <a href="https://jiantaoshi.github.io" class="footerLogo gitHub"></a>
-    <a href="http://bioinformatics.sibcb.ac.cn" class="footerLogo homepage"></a>
+    <a href="https://scholar.google.com/citations?user=As_3nrcAAAAJ&amp;hl=en" class="footerLogo homepage"></a>
   </div>
 </div>
-	<p>CSS was modified from <a href="https://github.com/rstudio/rmarkdown/tree/gh-pages/">Rstudio Rmarkdown</a>
 </div>
 
 
