--- a/Software.html
+++ b/Software.html
@@ -2281,17 +2281,63 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="network-biology" class="section level2">
 <h2>Network Biology</h2>
-<ul>
-<li>NetGPA: Network-based gene prioritization analysis.<a href="https://github.com/JiantaoShi/NetGPA">[Github]</a> <a href="NetGPA_vignettes.html">[Vignettes]</a></li>
-<li>NetORA: Network-based pathway over-representation analysis.<a href="https://github.com/JiantaoShi/NetORA">[Github]</a> <a href="NetORA_vignettes.html">[Vignettes]</a></li>
-</ul>
+<table>
+<colgroup>
+<col width="8%"></col>
+<col width="30%"></col>
+<col width="30%"></col>
+<col width="30%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th align="right">Name</th>
+<th align="center">Description</th>
+<th align="center">Code</th>
+<th align="center">Document</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">NetGPA</td>
+<td align="center">Network-based gene prioritization analysis</td>
+<td align="center"><a href="https://github.com/JiantaoShi/NetGPA">[Github]</a></td>
+<td align="center"><a href="NetGPA_vignettes.html">[Vignettes]</a></td>
+</tr>
+<tr class="even">
+<td align="right">NetORA</td>
+<td align="center">Network-based pathway over-representation analysis</td>
+<td align="center"><a href="https://github.com/JiantaoShi/NetORA">[Github]</a></td>
+<td align="center"><a href="NetORA_vignettes.html">[Vignettes]</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="epigenomics" class="section level2">
 <h2>Epigenomics</h2>
-<ul>
-<li>AMD: an Automated Motif Discovery Tool. <a href="https://github.com/JiantaoShi/AMD">[Github]</a> <a href="Publications/PlosOne_2011.pdf">[Full Text]</a></li>
-<li>mHaplotype: Extracting DNA methylation haplotypes. <a href="mHaplotype_vignettes.html">[Vignettes]</a></li>
-</ul>
+<table>
+<thead>
+<tr class="header">
+<th align="right">Name</th>
+<th align="center">Description</th>
+<th align="center">Code</th>
+<th align="center">Document</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">AMD</td>
+<td align="center">an Automated Motif Discovery Tool</td>
+<td align="center"><a href="https://github.com/JiantaoShi/AMD">[Github]</a></td>
+<td align="center"><a href="Publications/PlosOne_2011.pdf">[Full Text]</a></td>
+</tr>
+<tr class="even">
+<td align="right">mHaplotyp</td>
+<td align="center">Extracting DNA methylation haplotypes</td>
+<td align="center"></td>
+<td align="center"><a href="mHaplotype_vignettes.html">[Vignettes]</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 
   </div> <!-- articleBandContent -->
@@ -2299,13 +2345,12 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 <div id="rStudioFooter" class="band full">
 <div class="bandContent">
-  <div id="copyright">The Bioinformatics Core, Shanghai Institute of Biochemistry and Cell Biology, CAS</div>
+  <div id="copyright">Shanghai Institute of Biochemistry and Cell Biology, Center for Excellence in Molecular Cell Science, CAS</div>
   <div id="logos">
     <a href="https://jiantaoshi.github.io" class="footerLogo gitHub"></a>
-    <a href="http://bioinformatics.sibcb.ac.cn" class="footerLogo homepage"></a>
+    <a href="https://scholar.google.com/citations?user=As_3nrcAAAAJ&amp;hl=en" class="footerLogo homepage"></a>
   </div>
 </div>
-	<p>CSS was modified from <a href="https://github.com/rstudio/rmarkdown/tree/gh-pages/">Rstudio Rmarkdown</a>
 </div>
 
 
