--- a/MM_rainbow_GSE121007/Citation.html
+++ b/MM_rainbow_GSE121007/Citation.html
@@ -2291,10 +2291,10 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 <div id="rStudioFooter" class="band full">
 <div class="bandContent">
-  <div id="copyright">The Bioinformatics Core, Shanghai Institute of Biochemistry and Cell Biology, CAS</div>
+  <div id="copyright">Shanghai Institute of Biochemistry and Cell Biology, Center for Excellence in Molecular Cell Science, CAS</div>
   <div id="logos">
     <a href="https://jiantaoshi.github.io" class="footerLogo gitHub"></a>
-    <a href="http://bioinformatics.sibcb.ac.cn" class="footerLogo homepage"></a>
+    <a href="https://scholar.google.com/citations?user=As_3nrcAAAAJ&amp;hl=en" class="footerLogo homepage"></a>
   </div>
 </div>
 </div>
