--- a/Software.html
+++ b/Software.html
@@ -2336,6 +2336,12 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="center"></td>
 <td align="center"><a href="mHaplotype_vignettes.html">[Vignettes]</a></td>
 </tr>
+<tr class="odd">
+<td align="right">mHapTools</td>
+<td align="center">Processing of DNA methylation haplotypes</td>
+<td align="center"><a href="https://github.com/butyuhao/mHapTools">[Github]</a></td>
+<td align="center"><a href="https://jiantaoshi.github.io/mHap/index.html">[Vignettes]</a></td>
+</tr>
 </tbody>
 </table>
 </div>
