--- a/Publications.html
+++ b/Publications.html
@@ -2282,7 +2282,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <p><code>#</code> indicates equal contribution.</p>
 <div id="biological-discovery" class="section level2">
 <h2>Biological Discovery</h2>
-<p>Shen YJ#, Mishima Y#, <strong>Shi J#</strong>, Sklavenitis-Pistofidis R#, Redd RA, Moschetta M, Manier S, Roccaro A, Sacco A, Tai Y-T, Mercier F, Kawano Y, Su NK, Berrios B, Doench JG, Root DE, Michor F, Scadden DT, Ghobrial IM (2020) Progression signature underlies clonal evolution and dissemination of multiple myeloma. <em>Blood</em>, in press <a href="https://jiantaoshi.github.io/MM_rainbow_GSE121007/index.html">[Supporting Website]</a></p>
+<p>Shen YJ#, Mishima Y#, <strong>Shi J#</strong>, Sklavenitis-Pistofidis R#, Redd RA, Moschetta M, Manier S, Roccaro A, Sacco A, Tai Y-T, Mercier F, Kawano Y, Su NK, Berrios B, Doench JG, Root DE, Michor F, Scadden DT, Ghobrial IM (2020) Progression signature underlies clonal evolution and dissemination of multiple myeloma. <em>Blood</em>, in press <a href="Publications/Blood_2020.pdf">[Full Text]</a> <a href="https://jiantaoshi.github.io/MM_rainbow_GSE121007/index.html">[Supporting Website]</a></p>
 <p>Smith ZD#, <strong>Shi J#</strong>, Gu H, Donaghey J, Clement K, Cacchiarelli D, Gnirke A, Michor F, Meissner A: Epigenetic restriction of extraembryonic lineages mirrors the somatic transition to cancer. <em>Nature</em> 2017 <a href="https://www.ncbi.nlm.nih.gov/pubmed/28959968">[Pubmed]</a> <a href="Publications/nature23891.pdf">[Full Text]</a> <a href="https://jiantaoshi.github.io/NoteBook/Notes_Placenta_GSE84236_raw.html">[Raw data]</a></p>
 <p>Mishima Y#, Paiva B#, <strong>Shi J#</strong>, Park J, Manier S, Takagi S, Massoud M, Perilla-Glen A, Aljawai Y, Huynh D, Roccaro AM, Sacco A, Capelletti M, Detappe A, Alignani D, Anderson KC, Munshi NC, Prosper F, Lohr JG, Ha G, Freeman SS, Van Allen EM, Adalsteinsson VA, Michor F, San Miguel JF, Ghobrial IM: The Mutational Landscape of Circulating Tumor Cells in Multiple Myeloma. <em>Cell Rep</em> 2017, 19:218–224. <a href="https://www.ncbi.nlm.nih.gov/pubmed/28380360">[Pubmed]</a> <a href="Publications/CellReport_2017.pdf">[Full Text]</a></p>
 <p>Roccaro AM#, Sacco A#, <strong>Shi J#</strong>, Chiarini M, Perilla-Glen A, Manier S, Glavey S, Aljawai Y, Mishima Y, Kawano Y, Moschetta M, Correll M, Improgo MR, Brown JR, Imberti L, Rossi G, Castillo J, Treon SP, Freedman ML, Van Allen EM, Hide W, Hiller E, Rainville I, Ghobrial IM: Exome sequencing reveals recurrent germline variants in patients with familial Waldenstrom’s macroglobulinemia. <em>Blood</em> 2016:blood–2015–11–680199. <a href="https://www.ncbi.nlm.nih.gov/pubmed/26903547">[Pubmed]</a> <a href="Publications/Blood_2016.pdf">[Full Text]</a></p>
@@ -2355,7 +2355,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
