--- a/Notebook.html
+++ b/Notebook.html
@@ -2282,7 +2282,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <div id="introduction-to-bioinformatics" class="section level2">
 <h2>Introduction to bioinformatics</h2>
 <ul>
-<li><a href="course/Notes_Alignment.html">Sequence alignment</a></li>
+<li><a href="course/Notes_PSA.html">Sequence alignment</a></li>
 <li><a href="course/Notes_Phylogenetic.html">Phylogenetic tree</a></li>
 <li><a href="course/Notes_MSA.html">Multiple sequence alignment</a></li>
 </ul>
