--- a/mHap/AnnotationFiles.html
+++ b/mHap/AnnotationFiles.html
@@ -2279,7 +2279,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 
 <hr />
-<p>In order to run the whole workflow of DNA methylation haplotype analysis, some annotation files are needed. For example, genome files are required to align sequence reads using <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-10-232">Bsmap</a>; while Bismark indexes are required for <a href="https://www.bioinformatics.babraham.ac.uk/projects/bismark/">Bismark</a> alignment. CpG sites and indexes are specifically required to run mHapTools. These <a href="http://bioinformatics.sibcb.ac.cn/dataupload/iGenome/">annotation files</a> are hosted in our server and can also be accessed below.</p>
+<p>In order to run the whole workflow of DNA methylation haplotype analysis, some annotation files are needed. For example, genome files are required to align sequence reads using <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-10-232">Bsmap</a>, while Bismark indexes are required for <a href="https://www.bioinformatics.babraham.ac.uk/projects/bismark/">Bismark</a> alignment. CpG sites and indexes are specifically required to run mHapTools. These <a href="http://bioinformatics.sibcb.ac.cn/dataupload/iGenome/">annotation files</a> are hosted in our server and can also be accessed below.</p>
 <div id="for-human-and-mouse" class="section level2">
 <h2>For Human and Mouse</h2>
 <table>
